# crosstalk

./: Cargo.toml  LICENSE-MIT  README.md  architecture.md
.github/ISSUE_TEMPLATE/: bug_report.md
src/: chat.rs  cli.rs  color.rs  config.rs  main.rs  providers.rs  registry.rs  repl.rs  version.rs
src/cli/: chat.rs  list.rs
src/cli/chat/: highlighter.rs  prompt.rs  repl.rs  tempfile.rs
src/cli/list/: table.rs
src/providers/: apireq.rs  ollama.rs  openai.rs  providers.rs  registry.rs
src/providers/apireq/: error.rs  json_stream_parser.rs  provider.rs  stream_ext.rs
src/providers/ollama/: api.rs  provider.rs
src/providers/openai/: api.rs  models.rs  provider.rs
src/registry/: default_priority.rs  populate.rs  registry.rs
src/utils/: errors.rs
