[package]
name = "xtalk"
version = "0.0.1-alpha.1"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
bytes = "1.6.0"
clap = { version = "4.5.9", features = ["derive"] }
die = "0.2.0"
futures-core = "0.3.30"
futures-util = "0.3.30"
lazy_static = "1.4.0"
nu-ansi-term = "0.50.0"
rand = "0.8.5"
reedline = "0.32.0"
reqwest = { version = "0.12.4", features = ["stream", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
thiserror = "1.0.63"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.19"
url = "2.5.1"
